--- a/index.html
+++ b/index.html
@@ -98,6 +98,18 @@
                 </div>
             </div>
        </section>
+       <section class="no-download-section">
+        <div class="no-download-div">
+            <div class="no-download-text-div">
+                <h1><span class="gamer-h1">Play Instantly,</span><br> No Downloads No Installs.</h1>
+                <p class="gamer-description">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+            </div>
+            <div class="no-download-image-div">
+                <img src="images/Rectangle 55.png" alt="" class="no-download-image">
+                <img src="images/Rectangle 66.png" alt="" class="short-image">
+            </div>
+        </div>   
+       </section>
     </main>
     <footer></footer>
 </body>
