--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                 </div>
             </div>
        </section>
+       <!-- end gamer section -->
        <section class="no-download-section">
         <div class="no-download-div">
             <div class="no-download-text-div">
@@ -105,12 +106,74 @@
                 <p class="gamer-description">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
             </div>
             <div class="no-download-image-div">
-                <img src="images/Rectangle 55.png" alt="" class="no-download-image">
-                <img src="images/Rectangle 66.png" alt="" class="short-image">
+                <div class="no-download-image">
+                    <img src="images/Rectangle 55.png" alt="">
+                </div>
+                <img src="images/Rectangle 66.png" alt="" class="no-download-short-image">
             </div>
         </div>   
        </section>
+       <!-- end no download section -->
+
+       <!-- <section class="image-btn-section">
+        <button class="image-btn">
+          <div class="image-btn-div">
+              <img src="images/Rectangle 11.png" alt="">
+          </div>
+          Action Games
+        </button>
+        <button class="image-btn">
+          <div class="image-btn-div">
+              <img src="images/Rectangle 12.png" alt="">
+          </div>
+          Adventure Games
+        </button>
+        <button class="image-btn">
+          <div class="image-btn-div">
+              <img src="images/Rectangle 13.png" alt="">
+          </div>
+          Arcade Games
+        </button>
+        <button class="image-btn">
+          <div class="image-btn-div">
+              <img src="images/Rectangle 14.png" alt="">
+          </div>
+          Educational Games
+        </button>
+        <button class="image-btn">
+          <div class="image-btn-div">
+              <img src="images/Rectangle 15.png" alt="">
+          </div>
+          Word Games
+        </button>
+        <button class="image-btn">
+          <div class="image-btn-div">
+              <img src="images/Rectangle 16.png" alt="">
+          </div>
+          Role Palying Games
+        </button>
+        <button class="image-btn">
+          <div class="image-btn-div">
+              <img src="images/Rectangle 17.png" alt="">
+          </div>
+          Music & Audio Games
+        </button>
+        <button class="image-btn">
+          <div class="image-btn-div">
+              <img src="images/Rectangle 18.png" alt="">
+          </div>
+          Puzzle Games
+        </button>
+        <button class="image-btn">
+          <div class="image-btn-div">
+              <img src="images/Rectangle 19.png" alt="">
+          </div>
+          Strategy Games
+        </button>
+     </section> -->
     </main>
-    <footer></footer>
+    <footer>
+        
+    </footer>
 </body>
 </html>
