--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
             <div class="online-game-div">
                 <div class="online-game-image">
                     <div class="online-image">
-                        <img src="images/Rectangle 4.png" alt="">
+                        <img src="images/Rectangle 4.png" alt="" class="online-pic ">
+                        <div class="online-icon">
+                            <i class="fa-solid fa-play" ></i>
+                        <p class="online-image-p ">Watch Now</p>
+                        </div>
                     </div>
                     <div>
                         <p class="gamer-bottom-text">No Download. No Installs. Play games Instantly on Gamer.</p>
@@ -74,7 +78,11 @@
                 </div>
                 <div class="online-game-image">
                     <div class="online-image">
-                        <img src="images/Rectangle 5.png" alt="">
+                        <img src="images/Rectangle 5.png" alt="" class="online-pic online-image2">
+                        <div class="online-icon">
+                            <i class="fa-solid fa-play" class="online-image-i"></i>
+                        <p class="online-image-p">Watch Now</p>
+                        </div>
                     </div>
                     <div>
                         <p class="gamer-bottom-text">Did you score? #unblockedgames #school</p>
@@ -82,7 +90,11 @@
                 </div>
                 <div class="online-game-image">
                     <div class="online-image">
-                        <img src="images/Rectangle 7.png" alt="">
+                        <img src="images/Rectangle 7.png" alt="" class="online-pic online-image3">
+                        <div class="online-icon">
+                            <i class="fa-solid fa-play" class="online-image-i"></i>
+                        <p class="online-image-p">Watch Now</p>
+                        </div>
                     </div>
                     <div>
                         <p class="gamer-bottom-text">Breaking game records like OG</p>
@@ -90,7 +102,11 @@
                 </div>
                 <div class="online-game-image">
                     <div class="online-image">
-                        <img src="images/Rectangle 6.png" alt="">
+                        <img src="images/Rectangle 6.png" alt="" class="online-pic online-image4">
+                        <div class="online-icon">
+                            <i class="fa-solid fa-play" class="online-image-i"></i>
+                        <p class="online-image-p">Watch Now</p>
+                        </div>
                     </div>
                     <div>
                         <p class="gamer-bottom-text">Busted gaming on school laptop, but you are still lit.</p>
@@ -115,7 +131,7 @@
        </section>
        <!-- end no download section -->
 
-       <!-- <section class="image-btn-section">
+       <section class="image-btn-section">
         <button class="image-btn">
           <div class="image-btn-div">
               <img src="images/Rectangle 11.png" alt="">
@@ -146,7 +162,7 @@
           </div>
           Word Games
         </button>
-        <button class="image-btn">
+        <button class="image-btn bnt-6">
           <div class="image-btn-div">
               <img src="images/Rectangle 16.png" alt="">
           </div>
@@ -170,10 +186,38 @@
           </div>
           Strategy Games
         </button>
-     </section> -->
+     </section>
     </main>
-    <footer>
-        
+    <footer class="footer">
+        <div>
+             <div class="nav-logo-div footer-logo">
+                <img src="images/Frame.png" alt="">
+                <label class="nav-gamer-text"><span class="letter-design">G</span>amer</label>
+            </div>
+            <div class="our-story-div">
+                <p>Our Story</p>
+                <p>Games</p>
+                <p>Web Games</p>
+                <p>Careers</p>
+                <p>Support</p>
+                <p>My Account</p>
+            </div>
+            <div class="footer-icon">
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-linkedin-in"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-apple"></i>
+            </div>
+            <div class="footer-about-div">
+                <p>Terms and Conditions</p>
+                <p>Privacy Policy</p>
+                <p>Cookie Policy</p>
+                <p>Privacy Settings</p>
+            </div >
+            <small class="footer-about-div">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</small>
+        </div>
     </footer>
 </body>
 </html>
