--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
                 <li>No Download</li>
                 <li>1000s of supported online games</li>
             </ul>
-            <button class="sign-in-btn">Sign In</button>
+            <div>
+                <button class="sign-in-btn">Sign In</button>
             <button class="go-rogue-btn sign-in-btn">Go Rogue</button>
+            </div>
         </div>
         <div class="play-image-div">
             <img src="images/Group 18.png" alt="">
