--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li>No Download</li>
                 <li>1000s of supported online games</li>
             </ul>
-            <div>
+            <div class="play-btn">
                 <button class="sign-in-btn">Sign In</button>
             <button class="go-rogue-btn sign-in-btn">Go Rogue</button>
             </div>
